# internal/schema/common.go
@@ -1,0 +1,3 @@
+package schema
+
+type EmptyData struct{}
