# internal/schema/user_response.go
@@ -1,0 +1,8 @@
+package schema
+
+type CurrentUserResponse struct {
+	IP        string `json:"ip"`
+	Valid     bool   `json:"valid"`
+	UserEmail string `json:"userEmail"`
+	UserId    string `json:"userId"`
+}
